--- a/blocks/footer/__author/footer__author.css
+++ b/blocks/footer/__author/footer__author.css
@@ -1,6 +1,6 @@
 .footer__author {
   margin: 0;
-  font-family: 'Inter Regular';
+  font-family: 'Inter Regular', serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -10,7 +10,7 @@
 @media screen and (max-width: 695px) {
   .footer__author {
     margin: 0;
-    font-family: 'Inter Regular';
+    font-family: 'Inter Regular', serif;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
