--- a/blocks/intro/__span-accent/intro__span-accent.css
+++ b/blocks/intro/__span-accent/intro__span-accent.css
@@ -1,5 +1,5 @@
 .intro__span-accent {
-  font-family: 'Inter Regular';
+  font-family: 'Inter Regular', serif;
   font-weight: 400;
   font-size: 12px;
   line-height: 18px;
