--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,5 +1,5 @@
 .intro__text {
-  font-family: 'Inter Regular';
+  font-family: 'Inter Regular', serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 163%;
