--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,5 +1,5 @@
 .lead__title {
-  font-family: 'Inter Black';
+  font-family: 'Inter Black', serif;
   font-weight: 900;
   font-size: 96px;
   line-height: 100px;
