--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,19 +1,19 @@
 @font-face {
   font-family: 'Inter Regular';
-  src: url(./fonts/Inter-Regular.woff2) format(woff2);
-  src: url(./fonts/Inter-Regular.woff) format(woff);
+  src: url(../../vendor/fonts/Inter-Regular.woff2) format(woff2);
+  src: url(../../vendor/fonts/Inter-Regular.woff) format(woff);
 }
 
 @font-face {
   font-family: 'Inter Bold';
-  src: url(./fonts/Inter-Bold.woff2) format(woff2);
-  src: url(./fonts/Inter-Bold.woff) format(woff);
+  src: url(../../vendor/fonts/Inter-Bold.woff2) format(woff2);
+  src: url(../../vendor/fonts/Inter-Bold.woff) format(woff);
 }
 
 @font-face {
   font-family: 'Inter Black';
-  src: url(./fonts/Inter-Black.woff2) format(woff2);
-  src: url(./fonts/Inter-Black.woff) format(woff);
+  src: url(../../vendor/fonts/Inter-Black.woff2) format(woff2);
+  src: url(../../vendor/fonts/Inter-Black.woff) format(woff);
 }
 
 .page {
