--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,5 +1,5 @@
 .place__link {
-  font-family: 'Inter Regular';
+  font-family: 'Inter Regular', serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
