--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,5 +1,5 @@
 .place__paragraph {
-  font-family: 'Inter Regular';
+  font-family: 'Inter Regular', serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
