--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,5 +1,5 @@
 .place__title {
-  font-family: 'Inter Black';
+  font-family: 'Inter Black', serif;
   font-size: 72px;
   font-weight: 900;
   line-height: 76px;
