--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -3,6 +3,8 @@
   line-height: 28px;
   font-weight: 400;
   display: inline;
+  color: #fff;
+  text-decoration: none;
 }
 
 @media screen and (max-width: 695px) {
