--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -4,4 +4,29 @@
   font-size: 16px;
   line-height: 163%;
   margin: 0;
+  display: flex;
+  justify-content: start;
+  margin: 40px 0 0 148px;
+  max-width: 690px;
 }
+
+@media screen and (max-width: 1155px) {
+  .intro__text {
+    margin: 40px 0 0 48px;
+  }
+}
+
+@media screen and (max-width: 770px) {
+  .intro__text {
+    margin: 40px 0 0 24px;
+    max-width: 720px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .intro__text {
+    margin: 40px 0 0 16px;
+    max-width: 288px;
+  }
+}
+
