--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -4,11 +4,23 @@
   font-size: 30px;
   line-height: 36px;
   text-align: center;
-  margin: 0;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto 65px auto;
+  width: 640px;
+}
+
+@media screen and (max-width: 1155px) {
+  .lead__subtitle {
+    margin: 0 auto 56px auto;
+    width: 640px;
+  }
 }
 
 @media screen and (max-width: 695px) {
   .lead__subtitle {
+    margin: 0 auto 40px auto;
+    width: 288px;
     font-size: 16px;
     line-height: 20px;
   }
