--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -5,11 +5,38 @@
   line-height: 100px;
   text-align: center;
   margin: 0;
+  display: flex;
+  justify-content: center;
+  margin: 56px auto 32px auto;
+  max-width: 720px;
+}
+
+@media screen and (max-width: 1155px) {
+  .lead__title {
+    margin: 48px auto 32px auto;
+  }
+}
+
+@media screen and (max-width: 770px) {
+  .lead__title {
+    margin: 48px auto 32px auto;
+  }
 }
 
 @media screen and (max-width: 695px) {
   .lead__title {
     font-size: 40px;
     line-height: 44px;
+    margin: 48px auto 16px auto;
+    max-width: 288px;
   }
 }
+
+@media screen and (max-width: 425px) {
+  .intro__title {
+    margin: 64px 0 0 16px;
+  }
+}
+
+
+
