--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -22,6 +22,8 @@
 
 @media screen and (max-width: 425px) {
   .intro__title {
+    max-width: 290px;
+    margin: 64px 0 0 16px;
     font-size: 32px;
     line-height: 35px;
   }
