--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,5 +1,5 @@
 .lead__caption {
-  font-family: 'Inter Regular', serif;
+  font-family: 'Inter', serif;
   font-weight: 400;
   font-size: 10px;
   line-height: 14px;
