--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,5 +1,5 @@
 .lead__subtitle {
-  font-family: 'Inter Regular', serif;
+  font-family: 'Inter', serif;
   font-weight: 400;
   font-size: 30px;
   line-height: 36px;
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: center;
   margin: 0 auto 65px auto;
-  width: 640px;
+  max-width: 640px;
 }
 
 @media screen and (max-width: 1155px) {
