--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,5 +1,5 @@
 .place__paragraph {
-  font-family: 'Inter Regular', serif;
+  font-family: 'Inter', serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -15,15 +15,7 @@
  }
 
  @media screen and (max-width: 760px) {
-  .place__paragraph {
-    font-size: 16px;
-    line-height: 26px;
-    padding: 0 0 25px 0;
-  }
-
   .place__paragraph:last-of-type {
-    font-size: 16px;
-    line-height: 26px;
-    padding-bottom: 0;
+    padding: 0;
   }
  }
