--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -1,6 +1,9 @@
 .place__paragraphs {
   max-width: 484px;
   padding: 0 0 0 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 26px;
 }
 
 @media screen and (max-width: 1155px) {
