--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,5 +1,5 @@
 .place__url-heading {
-  font-family: 'Inter Regular', serif;
+  font-family: 'Inter', serif;
   font-size: 12px;
   font-weight: 400;
   line-height: 12px;
