extend cover absolute

--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -34,3 +34,9 @@
     padding: 0 0 32px 0px;
   }
 }
+
+@media screen and (max-width: 425px) {
+  .place__title {
+    padding: 0 0 32px 16px;
+  }
+}
