--- a/blocks/cover/__container/cover__container.css
+++ b/blocks/cover/__container/cover__container.css
@@ -1,22 +1,10 @@
 .cover__container {
-  padding: 0 48px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-.cover__container:hover img {
-  opacity: .3;
-}
 
-@media screen and (max-width: 1155px) {
-  .cover__container {
-    padding: 0;
-  }
-}
-
-@media screen and (max-width: 770px) {
-  .cover__container {
-    padding: 0;
-  }
-}
+.cover__container:hover .cover__image { 
+  opacity: .3; 
+} 
