--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,3 +1,10 @@
 .cover {
   position: relative;
+  padding: 0 48px;
+}
+
+@media screen and (max-width: 1155px) { 
+  .cover { 
+    padding: 0;
+  }
 }
