--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -27,3 +27,11 @@
     padding: 0 0 32px 0px;
   }
 }
+
+@media screen and (max-width: 425px) {
+  .place__image {
+    max-width: 320px;
+    max-height: 320px;
+    padding: 0 0 32px 0px;
+  }
+}
