--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -26,3 +26,9 @@
     padding: 0 0 50px 0px;
   }
 }
+
+@media screen and (max-width: 425px) {
+  .place__paragraphs {
+    padding: 0 0 50px 16px;
+  }
+}
