--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -21,3 +21,9 @@
     padding: 0 0 32px 0px;
   }
 }
+
+@media screen and (max-width: 425px) {
+  .place__website {
+    padding: 0 0 32px 16px;
+  }
+}
