--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -38,3 +38,15 @@
     padding: 0 0 0px 16px;
   }
 }
+
+@media screen and (max-width: 425px) {
+  .place {
+    flex-direction: column;
+    padding: 0 0 0 0px;
+    margin: 0;
+  }
+
+  .place:last-of-type {
+    padding: 0 0 0px 0px;
+  }
+}
