--- a/blocks/cover/__container/cover__container.css
+++ b/blocks/cover/__container/cover__container.css
@@ -3,8 +3,51 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-image: url(../../../images/cover-trains.jpg);
+  background-size: cover;
+  max-width: 1184px;
+  min-height: 740px;
+  z-index: 3;
+  object-fit: cover;
 }
 
-.cover__container:hover .cover__image { 
-  opacity: .3; 
-} 
+.cover__link::before {
+  content: "";
+  background: #2A2C2F;
+  opacity: .3;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.cover__link:hover::before {
+  transition: .3s;
+  opacity: .8;
+}
+
+@media screen and (max-width: 1155px) {
+  .cover__container {
+    min-height: 640px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .cover__container {
+    min-height: 640px;
+  }
+}
+
+@media screen and (max-width: 760px) {
+  .cover__container {
+    min-height: 480px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .cover__container {
+    min-height: 200px;
+  }
+}
