--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,10 +1,11 @@
 .cover {
   position: relative;
-  padding: 0 48px;
+  margin: 0 48px;
 }
 
 @media screen and (max-width: 1155px) { 
   .cover { 
-    padding: 0;
+    margin: 0;
   }
 }
+
