--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -2,7 +2,7 @@
   text-decoration: none;
   color: #FFF;
   opacity: 1;
-  font-family: 'Inter Regular', serif;
+  font-family: 'Inter', serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
